# bestbank

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: banking.rs  login.rs  main.rs  storage.rs  tests.rs
templates/: banking.html.hbs  index.html.hbs  login.html.hbs
