[package]
name = "bestbank"
version = "0.4.0"
authors = ["jgrant"]
edition = "2018"

[dependencies]
maplit = "1"
md5 = "0.7"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = "0.9"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features = ["private-cookies", "tls"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
features = ["json", "handlebars_templates"]
