[package]
name = "bestbank"
version = "0.6.0"
authors = ["jgrant"]
edition = "2024"

[dependencies]
maplit = "1"
md5 = "0.7"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ws = "0.9"
mio = "1"

rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera"] }
rocket-include-static-resources = "0.10.5"